manifest/syncer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kcp-system 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kcp-syncer-ID
  name: syncer
  namespace: kcp-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kcp-syncer-ID
  template:
    metadata:
      labels:
        app: kcp-syncer-ID
    spec:
      containers:
      - args:
        - --from-kubeconfig=/kcp/config/kubeconfig
        - --workload-cluster-name=WORKLOAD_CLUSTER_NAME   # ID of the -to cluster. Resources with this ID set in the 'workloads.kcp.dev/cluster' label will be synced
        - --from-cluster=KCP_LOGICAL_CLUSTER_NAME         # Name of the -from logical cluster
        - --sync-resources=deployments.apps               # List of resources to be synchronized in kcp
        - --sync-resources=ingresses.networking.k8s
        - --sync-resources=services
        image: ghcr.io/kcp-dev/kcp/syncer-c2e3073d5026a8f7f2c47a50c16bdbec:7005a96@sha256:9735cbe04f4a5c7137e1f544fa29520f1624304629371d6bd185fcfe15f3b7af
        imagePullPolicy: IfNotPresent
        name: syncer
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: kcp-kubeconfig
          mountPath: /kcp/config
          readOnly: true
        - name: kcp-service-account
          mountPath: /kcp/sa
          readOnly: true
      serviceAccountName: syncer
      volumes:
        - name: kcp-service-account
          secret:
            secretName: syncer-kcp-sa
            optional: false
        - name: kcp-kubeconfig
          configMap:
            name: syncer-kcp-config
            optional: false
