manifest/etcd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  clusterIP: None
  ports:
    - port: 2379
      name: client
    - port: 2380
      name: peer
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  serviceName: etcd
  selector:
    matchLabels:
      app: etcd
  replicas: 3
  template:
    metadata:
      name: etcd
      labels:
        app: etcd
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.2
          ports:
            - containerPort: 2379
              name: client
            - containerPort: 2380
              name: peer
          volumeMounts:
            - name: etcd-data
              mountPath: /var/run/etcd
            - name: peer-certs
              mountPath: /etc/etcd/tls/peer
            - name: server-certs
              mountPath: /etc/etcd/tls/server
          command:
            - /bin/sh
            - -c
            - |
              PEERS="etcd-0=https://etcd-0.etcd:2380,etcd-1=https://etcd-1.etcd:2380,etcd-2=https://etcd-2.etcd:2380"
              exec etcd --name ${HOSTNAME} \
                --listen-peer-urls https://0.0.0.0:2380 \
                --initial-advertise-peer-urls https://${HOSTNAME}:2380 \
                --listen-client-urls https://0.0.0.0:2379 \
                --advertise-client-urls https://${HOSTNAME}:2379 \
                --initial-cluster-token etcd-cluster-1 \
                --initial-cluster ${PEERS} \
                --initial-cluster-state new \
                --data-dir /var/run/etcd/default.etcd \
                --peer-client-cert-auth=true \
                --peer-cert-file=/etc/etcd/tls/peer/tls.crt \
                --peer-key-file=/etc/etcd/tls/peer/tls.key \
                --peer-trusted-ca-file=/etc/etcd/tls/peer/ca.crt \
                --client-cert-auth=true \
                --cert-file=/etc/etcd/tls/server/tls.crt \
                --key-file=/etc/etcd/tls/server/tls.key \
                --trusted-ca-file=/etc/etcd/tls/server/ca.crt
      volumes:
      - name: peer-certs
        secret:
          secretName: etcd-peer-secret
      - name: server-certs
        secret:
          secretName: etcd-secret
  volumeClaimTemplates:
    - metadata:
        name: etcd-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 8Gi
