manifest/kcp-front-proxy.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kcp-front-proxy
spec:
  host: kcp
  port:
    targetPort: 8443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: kcp-front-proxy
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: kcp-front-proxy
spec:
  ports:
    - protocol: TCP
      name: kcp-front-proxy
      port: 8443
      targetPort: 8443
  selector:
    app: kcp-front-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcp-front-proxy
  labels:
    app: kcp-front-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcp-front-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kcp-front-proxy
    spec:
      containers:
      - name: kcp-front-proxy
        image: ghcr.io/kcp-dev/kcp:latest
        ports:
        - containerPort: 8443
        command:
        - /kcp-front-proxy
        args:
        - --secure-port=8443
        - --tls-private-key-file=/etc/kcp-front-proxy/tls/tls.key
        - --tls-cert-file=/etc/kcp-front-proxy/tls/tls.crt
        - --client-ca-file=/etc/kcp-front-proxy/client/tls/ca.crt
        - --mapping-file=/etc/kcp-front-proxy/config/path-mapping.yaml
        - --v=6
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: livez
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: readyz
            port: 8443
            scheme: HTTPS
        volumeMounts:
        - name: kcp-front-proxy-cert
          mountPath: /etc/kcp-front-proxy/tls
        - name: kcp-front-proxy-config
          mountPath: /etc/kcp-front-proxy/config
        - name: kcp-client-ca
          mountPath: /etc/kcp-front-proxy/client/tls
        - name: kcp-ca
          mountPath: /etc/kcp/tls
        - name: kcp-virtual-workspaces-ca
          mountPath: /etc/virtual-workspaces/tls
        - name: kcp-front-proxy-kcp-client-cert
          mountPath: /etc/kcp-front-proxy/requestheader-client/tls/kcp
        - name: kcp-front-proxy-virtual-workspaces-client-cert
          mountPath: /etc/kcp-front-proxy/requestheader-client/tls/virtual-workspaces
      volumes:
      - name: kcp-front-proxy-cert
        secret:
          secretName: kcp-front-proxy-cert
      - name: kcp-client-ca
        secret:
          secretName: kcp-client-ca
          items:
            - key: ca.crt
              path: ca.crt
      - name: kcp-ca
        secret:
          secretName: kcp-cert
          items:
            - key: ca.crt
              path: ca.crt
      - name: kcp-virtual-workspaces-ca
        secret:
          secretName: kcp-virtual-workspaces-cert
          items:
            - key: ca.crt
              path: ca.crt
      - name: kcp-front-proxy-kcp-client-cert
        secret:
          secretName: kcp-front-proxy-kcp-client-cert
          items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      - name: kcp-front-proxy-virtual-workspaces-client-cert
        secret:
          secretName: kcp-front-proxy-virtual-workspaces-client-cert
          items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      - name: kcp-front-proxy-config
        configMap:
          name: kcp-front-proxy-config
          items:
            - key: "path-mapping.yaml"
              path: "path-mapping.yaml"
